# aws-sdk-cpp

./: README.md
Autoscaling GCP/: README.md
Autoscaling GCP/User Interface/: index.html  input  main.js  output
Autoscaling GCP/master/: CMakeLists.txt
Autoscaling GCP/master/headers/: ec2.h  mode1.h  mode2.h  utility.h
Autoscaling GCP/master/src/: ec2.cpp  main.cpp  mode1.cpp  mode2.cpp  utility.cpp
Autoscaling GCP/worker/: Makefile  main.c  utility.c  utility.h
test_project/: CMakeLists.txt  main.cpp
